--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -193,6 +193,7 @@
 <li><a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg" target="classFrame">LinearOperator</a></li>
 <li><a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim" target="classFrame">LineSearch</a></li>
 <li><a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim" target="classFrame">LineSearchStatus</a></li>
+<li><a href="mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim" target="classFrame">LineSearchTask</a></li>
 <li><a href="mitiv/array/Long1D.html" title="class in mitiv.array" target="classFrame">Long1D</a></li>
 <li><a href="mitiv/array/Long2D.html" title="class in mitiv.array" target="classFrame">Long2D</a></li>
 <li><a href="mitiv/array/Long3D.html" title="class in mitiv.array" target="classFrame">Long3D</a></li>
@@ -221,6 +222,7 @@
 <li><a href="mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim" target="classFrame">NonmonotoneLineSearch</a></li>
 <li><a href="mitiv/random/NormalDistribution.html" title="class in mitiv.random" target="classFrame">NormalDistribution</a></li>
 <li><a href="mitiv/exception/NotImplementedException.html" title="class in mitiv.exception" target="classFrame">NotImplementedException</a></li>
+<li><a href="mitiv/optim/OptimStatus.html" title="enum in mitiv.optim" target="classFrame">OptimStatus</a></li>
 <li><a href="mitiv/optim/OptimTask.html" title="enum in mitiv.optim" target="classFrame">OptimTask</a></li>
 <li><a href="mitiv/utils/Poly.html" title="class in mitiv.utils" target="classFrame">Poly</a></li>
 <li><a href="mitiv/random/PressTeukolskyGenerator.html" title="class in mitiv.random" target="classFrame">PressTeukolskyGenerator</a></li>
