--- a/constant-values.html
+++ b/constant-values.html
@@ -991,151 +991,6 @@
 <ul class="blockList">
 <li class="blockList">
 <table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
-<caption><span>mitiv.optim.<a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Modifier and Type</th>
-<th scope="col">Constant Field</th>
-<th class="colLast" scope="col">Value</th>
-</tr>
-<tbody>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.CONVERGENCE">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#CONVERGENCE">CONVERGENCE</a></code></td>
-<td class="colLast"><code>1</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_BAD_WORKSPACE">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_BAD_WORKSPACE">ERROR_BAD_WORKSPACE</a></code></td>
-<td class="colLast"><code>-10</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_CORRUPTED_WORKSPACE">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_CORRUPTED_WORKSPACE">ERROR_CORRUPTED_WORKSPACE</a></code></td>
-<td class="colLast"><code>-11</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_ILLEGAL_ADDRESS">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_ILLEGAL_ADDRESS">ERROR_ILLEGAL_ADDRESS</a></code></td>
-<td class="colLast"><code>-12</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_ILLEGAL_FX">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_ILLEGAL_FX">ERROR_ILLEGAL_FX</a></code></td>
-<td class="colLast"><code>-13</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_INITIAL_DERIVATIVE_GE_ZERO">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_INITIAL_DERIVATIVE_GE_ZERO">ERROR_INITIAL_DERIVATIVE_GE_ZERO</a></code></td>
-<td class="colLast"><code>-2</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_NOT_A_DESCENT">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_NOT_A_DESCENT">ERROR_NOT_A_DESCENT</a></code></td>
-<td class="colLast"><code>-7</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_NOT_STARTED">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_NOT_STARTED">ERROR_NOT_STARTED</a></code></td>
-<td class="colLast"><code>-1</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STP_CHANGED">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STP_CHANGED">ERROR_STP_CHANGED</a></code></td>
-<td class="colLast"><code>-9</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STP_GT_STPMAX">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STP_GT_STPMAX">ERROR_STP_GT_STPMAX</a></code></td>
-<td class="colLast"><code>-3</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STP_LT_STPMIN">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STP_LT_STPMIN">ERROR_STP_LT_STPMIN</a></code></td>
-<td class="colLast"><code>-4</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STP_OUTSIDE_BRACKET">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STP_OUTSIDE_BRACKET">ERROR_STP_OUTSIDE_BRACKET</a></code></td>
-<td class="colLast"><code>-8</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STPMIN_GT_STPMAX">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STPMIN_GT_STPMAX">ERROR_STPMIN_GT_STPMAX</a></code></td>
-<td class="colLast"><code>-6</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.ERROR_STPMIN_LT_ZERO">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#ERROR_STPMIN_LT_ZERO">ERROR_STPMIN_LT_ZERO</a></code></td>
-<td class="colLast"><code>-5</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.SEARCH">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#SEARCH">SEARCH</a></code></td>
-<td class="colLast"><code>0</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.WARNING_ROUNDING_ERRORS_PREVENT_PROGRESS">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#WARNING_ROUNDING_ERRORS_PREVENT_PROGRESS">WARNING_ROUNDING_ERRORS_PREVENT_PROGRESS</a></code></td>
-<td class="colLast"><code>2</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.WARNING_STP_EQ_STPMAX">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#WARNING_STP_EQ_STPMAX">WARNING_STP_EQ_STPMAX</a></code></td>
-<td class="colLast"><code>4</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.WARNING_STP_EQ_STPMIN">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#WARNING_STP_EQ_STPMIN">WARNING_STP_EQ_STPMIN</a></code></td>
-<td class="colLast"><code>5</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.LineSearch.WARNING_XTOL_TEST_SATISFIED">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/LineSearch.html#WARNING_XTOL_TEST_SATISFIED">WARNING_XTOL_TEST_SATISFIED</a></code></td>
-<td class="colLast"><code>3</code></td>
-</tr>
-</tbody>
-</table>
-</li>
-<li class="blockList">
-<table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
 <caption><span>mitiv.optim.<a href="mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim">NonLinearConjugateGradient</a></span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
 <th class="colFirst" scope="col">Modifier and Type</th>
@@ -1155,7 +1010,21 @@
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#DEFAULT_METHOD">DEFAULT_METHOD</a></code></td>
-<td class="colLast"><code>520</code></td>
+<td class="colLast"><code>771</code></td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.DELTA">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;double</code></td>
+<td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#DELTA">DELTA</a></code></td>
+<td class="colLast"><code>0.05</code></td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.EPSILON">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;double</code></td>
+<td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#EPSILON">EPSILON</a></code></td>
+<td class="colLast"><code>0.01</code></td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.FLETCHER">
@@ -1225,7 +1094,7 @@
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;double</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#STPMAX">STPMAX</a></code></td>
-<td class="colLast"><code>1000000.0</code></td>
+<td class="colLast"><code>1.0E20</code></td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.STPMIN">
@@ -1247,39 +1116,11 @@
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.BAD_PRECONDITIONER">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#BAD_PRECONDITIONER">BAD_PRECONDITIONER</a></code></td>
-<td class="colLast"><code>1</code></td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.FAILURE">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a></code></td>
 <td class="colLast"><code>-1</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_ERROR">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_ERROR">LNSRCH_ERROR</a></code></td>
-<td class="colLast"><code>3</code></td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_WARNING">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_WARNING">LNSRCH_WARNING</a></code></td>
-<td class="colLast"><code>2</code></td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.NO_PROBLEMS">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#NO_PROBLEMS">NO_PROBLEMS</a></code></td>
-<td class="colLast"><code>0</code></td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.SUCCESS">
