--- a/mitiv/optim/LBFGS.html
+++ b/mitiv/optim/LBFGS.html
@@ -254,7 +254,7 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.h
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#BAD_PRECONDITIONER">BAD_PRECONDITIONER</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchStatus">lineSearchStatus</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_ERROR">LNSRCH_ERROR</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_WARNING">LNSRCH_WARNING</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#NO_PROBLEMS">NO_PROBLEMS</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#reason">reason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></code></li>
+<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a></code></li>
 </ul>
 </li>
 </ul>
@@ -351,18 +351,11 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.h
 </tr>
 </table>
 <ul class="blockList">
-<li class="blockList"><a name="methods_inherited_from_class_mitiv.optim.ReverseCommunicationOptimizerWithLineSearch">
-<!--   -->
-</a>
-<h3>Methods inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim">ReverseCommunicationOptimizerWithLineSearch</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html#getErrorMessage()">getErrorMessage</a></code></li>
-</ul>
-<ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_mitiv.optim.ReverseCommunicationOptimizer">
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(int)">failure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getIterations()">getIterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getReason()">getReason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getRestarts()">getRestarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getTask()">getTask</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchFailure(mitiv.optim.LineSearchStatus)">lineSearchFailure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#schedule(mitiv.optim.OptimTask)">schedule</a></code></li>
+<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(mitiv.optim.OptimStatus)">failure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getIterations()">getIterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getReason()">getReason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getRestarts()">getRestarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getStatus()">getStatus</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getTask()">getTask</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#success(mitiv.optim.OptimTask)">success</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#warning(mitiv.optim.OptimStatus)">warning</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
