--- a/mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html
+++ b/mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html
@@ -62,13 +62,13 @@
 <li>NESTED&nbsp;|&nbsp;</li>
 <li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
-<li><a href="#method_summary">METHOD</a></li>
+<li><a href="#methods_inherited_from_class_mitiv.optim.ReverseCommunicationOptimizer">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
 <li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
-<li><a href="#method_detail">METHOD</a></li>
+<li>METHOD</li>
 </ul>
 </div>
 <a name="skip-navbar_top">
@@ -135,7 +135,7 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="cl
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#BAD_PRECONDITIONER">BAD_PRECONDITIONER</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchStatus">lineSearchStatus</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_ERROR">LNSRCH_ERROR</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_WARNING">LNSRCH_WARNING</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#NO_PROBLEMS">NO_PROBLEMS</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#reason">reason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></code></li>
+<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restarts">restarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a></code></li>
 </ul>
 </li>
 </ul>
@@ -162,26 +162,12 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="cl
 <!--   -->
 </a>
 <h3>Method Summary</h3>
-<table class="overviewSummary" border="0" cellpadding="3" cellspacing="0" summary="Method Summary table, listing methods, and an explanation">
-<caption><span>Methods</span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Modifier and Type</th>
-<th class="colLast" scope="col">Method and Description</th>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>java.lang.String</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizerWithLineSearch.html#getErrorMessage()">getErrorMessage</a></strong>()</code>
-<div class="block">Query a textual description of the reason of an abnormal
- termination.</div>
-</td>
-</tr>
-</table>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_mitiv.optim.ReverseCommunicationOptimizer">
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></h3>
-<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(int)">failure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getIterations()">getIterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getReason()">getReason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getRestarts()">getRestarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getTask()">getTask</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterate(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">iterate</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchFailure(mitiv.optim.LineSearchStatus)">lineSearchFailure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restart()">restart</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#schedule(mitiv.optim.OptimTask)">schedule</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#start()">start</a></code></li>
+<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(mitiv.optim.OptimStatus)">failure</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getIterations()">getIterations</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getReason()">getReason</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getRestarts()">getRestarts</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getStatus()">getStatus</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getTask()">getTask</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterate(mitiv.linalg.Vector, double, mitiv.linalg.Vector)">iterate</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restart()">restart</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#start()">start</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#success(mitiv.optim.OptimTask)">success</a>, <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#warning(mitiv.optim.OptimStatus)">warning</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -229,31 +215,6 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="cl
 <li class="blockList">
 <h4>ReverseCommunicationOptimizerWithLineSearch</h4>
 <pre>public&nbsp;ReverseCommunicationOptimizerWithLineSearch()</pre>
-</li>
-</ul>
-</li>
-</ul>
-<!-- ============ METHOD DETAIL ========== -->
-<ul class="blockList">
-<li class="blockList"><a name="method_detail">
-<!--   -->
-</a>
-<h3>Method Detail</h3>
-<a name="getErrorMessage()">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>getErrorMessage</h4>
-<pre>public&nbsp;java.lang.String&nbsp;getErrorMessage()</pre>
-<div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getErrorMessage()">ReverseCommunicationOptimizer</a></code></strong></div>
-<div class="block">Query a textual description of the reason of an abnormal
- termination.</div>
-<dl>
-<dt><strong>Overrides:</strong></dt>
-<dd><code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getErrorMessage()">getErrorMessage</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></code></dd>
-<dt><span class="strong">Returns:</span></dt><dd>A textual description of the reason of the abnormal
-         termination.</dd></dl>
 </li>
 </ul>
 </li>
@@ -309,13 +270,13 @@ extends <a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="cl
 <li>NESTED&nbsp;|&nbsp;</li>
 <li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
-<li><a href="#method_summary">METHOD</a></li>
+<li><a href="#methods_inherited_from_class_mitiv.optim.ReverseCommunicationOptimizer">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
 <li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
-<li><a href="#method_detail">METHOD</a></li>
+<li>METHOD</li>
 </ul>
 </div>
 <a name="skip-navbar_bottom">
