--- a/mitiv/optim/package-frame.html
+++ b/mitiv/optim/package-frame.html
@@ -33,6 +33,8 @@
 <ul title="Enums">
 <li><a href="InverseHessianApproximation.html" title="enum in mitiv.optim" target="classFrame">InverseHessianApproximation</a></li>
 <li><a href="LineSearchStatus.html" title="enum in mitiv.optim" target="classFrame">LineSearchStatus</a></li>
+<li><a href="LineSearchTask.html" title="enum in mitiv.optim" target="classFrame">LineSearchTask</a></li>
+<li><a href="OptimStatus.html" title="enum in mitiv.optim" target="classFrame">OptimStatus</a></li>
 <li><a href="OptimTask.html" title="enum in mitiv.optim" target="classFrame">OptimTask</a></li>
 </ul>
 </div>
