--- a/mitiv/optim/package-summary.html
+++ b/mitiv/optim/package-summary.html
@@ -191,6 +191,17 @@
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a></td>
+<td class="colLast">&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></td>
+<td class="colLast">
+<div class="block">Values returned by the reverse communication version of optimization
+ algorithms.</div>
+</td>
+</tr>
+<tr class="altColor">
 <td class="colFirst"><a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></td>
 <td class="colLast">
 <div class="block">Values returned by the reverse communication version of optimization
