--- a/mitiv/optim/package-tree.html
+++ b/mitiv/optim/package-tree.html
@@ -118,6 +118,8 @@
 <li type="circle">java.lang.Enum&lt;E&gt; (implements java.lang.Comparable&lt;T&gt;, java.io.Serializable)
 <ul>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim"><span class="strong">OptimTask</span></a></li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">OptimStatus</span></a></li>
+<li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">LineSearchTask</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">LineSearchStatus</span></a></li>
 <li type="circle">mitiv.optim.<a href="../../mitiv/optim/InverseHessianApproximation.html" title="enum in mitiv.optim"><span class="strong">InverseHessianApproximation</span></a></li>
 </ul>
