--- a/allclasses-noframe.html
+++ b/allclasses-noframe.html
@@ -193,6 +193,7 @@
 <li><a href="mitiv/linalg/LinearOperator.html" title="class in mitiv.linalg">LinearOperator</a></li>
 <li><a href="mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></li>
 <li><a href="mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></li>
+<li><a href="mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a></li>
 <li><a href="mitiv/array/Long1D.html" title="class in mitiv.array">Long1D</a></li>
 <li><a href="mitiv/array/Long2D.html" title="class in mitiv.array">Long2D</a></li>
 <li><a href="mitiv/array/Long3D.html" title="class in mitiv.array">Long3D</a></li>
@@ -221,6 +222,7 @@
 <li><a href="mitiv/optim/NonmonotoneLineSearch.html" title="class in mitiv.optim">NonmonotoneLineSearch</a></li>
 <li><a href="mitiv/random/NormalDistribution.html" title="class in mitiv.random">NormalDistribution</a></li>
 <li><a href="mitiv/exception/NotImplementedException.html" title="class in mitiv.exception">NotImplementedException</a></li>
+<li><a href="mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></li>
 <li><a href="mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></li>
 <li><a href="mitiv/utils/Poly.html" title="class in mitiv.utils">Poly</a></li>
 <li><a href="mitiv/random/PressTeukolskyGenerator.html" title="class in mitiv.random">PressTeukolskyGenerator</a></li>
