--- a/mitiv/optim/LineSearchStatus.html
+++ b/mitiv/optim/LineSearchStatus.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/LineSearchStatus.html" target="_top">FRAMES</a></li>
@@ -559,7 +559,7 @@ with the specified name</dd>
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/LineSearchStatus.html" target="_top">FRAMES</a></li>
