--- a/mitiv/optim/LineSearchTask.html
+++ b/mitiv/optim/LineSearchTask.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-<title>OptimTask</title>
+<title>LineSearchTask</title>
 <link rel="stylesheet" type="text/css" href="../../stylesheet.css" title="Style">
 </head>
 <body>
 <script type="text/javascript"><!--
     if (location.href.indexOf('is-external=true') == -1) {
-        parent.document.title="OptimTask";
+        parent.document.title="LineSearchTask";
     }
 //-->
 </script>
@@ -34,12 +34,12 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
-<li><a href="../../index.html?mitiv/optim/OptimTask.html" target="_top">FRAMES</a></li>
-<li><a href="OptimTask.html" target="_top">NO FRAMES</a></li>
+<li><a href="../../index.html?mitiv/optim/LineSearchTask.html" target="_top">FRAMES</a></li>
+<li><a href="LineSearchTask.html" target="_top">NO FRAMES</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_top">
 <li><a href="../../allclasses-noframe.html">All Classes</a></li>
@@ -78,17 +78,17 @@
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
 <p class="subTitle">mitiv.optim</p>
-<h2 title="Enum OptimTask" class="title">Enum OptimTask</h2>
+<h2 title="Enum LineSearchTask" class="title">Enum LineSearchTask</h2>
 </div>
 <div class="contentContainer">
 <ul class="inheritance">
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&gt;</li>
+<li>java.lang.Enum&lt;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>mitiv.optim.OptimTask</li>
+<li>mitiv.optim.LineSearchTask</li>
 </ul>
 </li>
 </ul>
@@ -99,16 +99,12 @@
 <li class="blockList">
 <dl>
 <dt>All Implemented Interfaces:</dt>
-<dd>java.io.Serializable, java.lang.Comparable&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&gt;</dd>
+<dd>java.io.Serializable, java.lang.Comparable&lt;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>&gt;</dd>
 </dl>
 <hr>
 <br>
-<pre>public enum <strong>OptimTask</strong>
-extends java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&gt;</pre>
-<div class="block">Values returned by the reverse communication version of optimization
- algorithms.</div>
-<dl><dt><span class="strong">Author:</span></dt>
-  <dd>Éric Thiébaut <eric.thiebaut@univ-lyon1.fr></dd></dl>
+<pre>public enum <strong>LineSearchTask</strong>
+extends java.lang.Enum&lt;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>&gt;</pre>
 </li>
 </ul>
 </div>
@@ -127,29 +123,16 @@ extends java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum
 <th class="colOne" scope="col">Enum Constant and Description</th>
 </tr>
 <tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#COMPUTE_FG">COMPUTE_FG</a></strong></code>
-<div class="block">Caller shall compute <code>f(x)</code> and <code>g(x)</code>.</div>
-</td>
+<td class="colOne"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#CONVERGENCE">CONVERGENCE</a></strong></code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#ERROR">ERROR</a></strong></code>
-<div class="block">An error has occurred.</div>
-</td>
+<td class="colOne"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#ERROR">ERROR</a></strong></code>&nbsp;</td>
 </tr>
 <tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#FINAL_X">FINAL_X</a></strong></code>
-<div class="block">Algorithm has converged, solution is available in <code>x</code>.</div>
-</td>
+<td class="colOne"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#SEARCH">SEARCH</a></strong></code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#NEW_X">NEW_X</a></strong></code>
-<div class="block">A new iterate is available in <code>x</code>.</div>
-</td>
-</tr>
-<tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#WARNING">WARNING</a></strong></code>
-<div class="block">Algorithm terminated with a warning.</div>
-</td>
+<td class="colOne"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#WARNING">WARNING</a></strong></code>&nbsp;</td>
 </tr>
 </table>
 </li>
@@ -168,25 +151,41 @@ extends java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/OptimTask.html#getCode()">getCode</a></strong>()</code>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#getCode()">getCode</a></strong>()</code>
 <div class="block">Get a numerical code corresponding to the optimization task.</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>java.lang.String</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/OptimTask.html#toString()">toString</a></strong>()</code>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#getDescription()">getDescription</a></strong>()</code>
 <div class="block">Query the description of the optimization task.</div>
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>static <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/OptimTask.html#valueOf(java.lang.String)">valueOf</a></strong>(java.lang.String&nbsp;name)</code>
-<div class="block">Returns the enum constant of this type with the specified name.</div>
+<td class="colFirst"><code>boolean</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#isError()">isError</a></strong>()</code>
+<div class="block">Check whether line search status corresponds to an error.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code>static <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>[]</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/OptimTask.html#values()">values</a></strong>()</code>
+<td class="colFirst"><code>boolean</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#isWarning()">isWarning</a></strong>()</code>
+<div class="block">Check whether line search status corresponds to a warning.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>java.lang.String</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#toString()">toString</a></strong>()</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>static <a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#valueOf(java.lang.String)">valueOf</a></strong>(java.lang.String&nbsp;name)</code>
+<div class="block">Returns the enum constant of this type with the specified name.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>static <a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>[]</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/LineSearchTask.html#values()">values</a></strong>()</code>
 <div class="block">Returns an array containing the constants of this enum type, in
 the order they are declared.</div>
 </td>
@@ -226,38 +225,25 @@ the order they are declared.</div>
 <ul class="blockList">
 <li class="blockList">
 <h4>ERROR</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> ERROR</pre>
-<div class="block">An error has occurred.</div>
+<pre>public static final&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a> ERROR</pre>
 </li>
 </ul>
-<a name="COMPUTE_FG">
+<a name="SEARCH">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>COMPUTE_FG</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> COMPUTE_FG</pre>
-<div class="block">Caller shall compute <code>f(x)</code> and <code>g(x)</code>.</div>
+<h4>SEARCH</h4>
+<pre>public static final&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a> SEARCH</pre>
 </li>
 </ul>
-<a name="NEW_X">
+<a name="CONVERGENCE">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>NEW_X</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> NEW_X</pre>
-<div class="block">A new iterate is available in <code>x</code>.</div>
-</li>
-</ul>
-<a name="FINAL_X">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>FINAL_X</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> FINAL_X</pre>
-<div class="block">Algorithm has converged, solution is available in <code>x</code>.</div>
+<h4>CONVERGENCE</h4>
+<pre>public static final&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a> CONVERGENCE</pre>
 </li>
 </ul>
 <a name="WARNING">
@@ -266,8 +252,7 @@ the order they are declared.</div>
 <ul class="blockListLast">
 <li class="blockList">
 <h4>WARNING</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> WARNING</pre>
-<div class="block">Algorithm terminated with a warning.</div>
+<pre>public static final&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a> WARNING</pre>
 </li>
 </ul>
 </li>
@@ -284,12 +269,12 @@ the order they are declared.</div>
 <ul class="blockList">
 <li class="blockList">
 <h4>values</h4>
-<pre>public static&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>[]&nbsp;values()</pre>
+<pre>public static&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>[]&nbsp;values()</pre>
 <div class="block">Returns an array containing the constants of this enum type, in
 the order they are declared.  This method may be used to iterate
 over the constants as follows:
 <pre>
-for (OptimTask c : OptimTask.values())
+for (LineSearchTask c : LineSearchTask.values())
 &nbsp;   System.out.println(c);
 </pre></div>
 <dl><dt><span class="strong">Returns:</span></dt><dd>an array containing the constants of this enum type, in
@@ -302,7 +287,7 @@ the order they are declared</dd></dl>
 <ul class="blockList">
 <li class="blockList">
 <h4>valueOf</h4>
-<pre>public static&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;valueOf(java.lang.String&nbsp;name)</pre>
+<pre>public static&nbsp;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>&nbsp;valueOf(java.lang.String&nbsp;name)</pre>
 <div class="block">Returns the enum constant of this type with the specified name.
 The string must match <i>exactly</i> an identifier used to declare an
 enum constant in this type.  (Extraneous whitespace characters are 
@@ -315,6 +300,16 @@ with the specified name</dd>
 <dd><code>java.lang.NullPointerException</code> - if the argument is null</dd></dl>
 </li>
 </ul>
+<a name="getDescription()">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>getDescription</h4>
+<pre>public&nbsp;java.lang.String&nbsp;getDescription()</pre>
+<div class="block">Query the description of the optimization task.</div>
+</li>
+</ul>
 <a name="toString()">
 <!--   -->
 </a>
@@ -322,21 +317,40 @@ with the specified name</dd>
 <li class="blockList">
 <h4>toString</h4>
 <pre>public&nbsp;java.lang.String&nbsp;toString()</pre>
-<div class="block">Query the description of the optimization task.</div>
 <dl>
 <dt><strong>Overrides:</strong></dt>
-<dd><code>toString</code>&nbsp;in class&nbsp;<code>java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&gt;</code></dd>
+<dd><code>toString</code>&nbsp;in class&nbsp;<code>java.lang.Enum&lt;<a href="../../mitiv/optim/LineSearchTask.html" title="enum in mitiv.optim">LineSearchTask</a>&gt;</code></dd>
 </dl>
 </li>
 </ul>
 <a name="getCode()">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>getCode</h4>
 <pre>public&nbsp;int&nbsp;getCode()</pre>
 <div class="block">Get a numerical code corresponding to the optimization task.</div>
+</li>
+</ul>
+<a name="isWarning()">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>isWarning</h4>
+<pre>public&nbsp;boolean&nbsp;isWarning()</pre>
+<div class="block">Check whether line search status corresponds to a warning.</div>
+</li>
+</ul>
+<a name="isError()">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>isError</h4>
+<pre>public final&nbsp;boolean&nbsp;isError()</pre>
+<div class="block">Check whether line search status corresponds to an error.</div>
 </li>
 </ul>
 </li>
@@ -364,12 +378,12 @@ with the specified name</dd>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/MoreThuenteLineSearch.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
-<li><a href="../../index.html?mitiv/optim/OptimTask.html" target="_top">FRAMES</a></li>
-<li><a href="OptimTask.html" target="_top">NO FRAMES</a></li>
+<li><a href="../../index.html?mitiv/optim/LineSearchTask.html" target="_top">FRAMES</a></li>
+<li><a href="LineSearchTask.html" target="_top">NO FRAMES</a></li>
 </ul>
 <ul class="navList" id="allclasses_navbar_bottom">
 <li><a href="../../allclasses-noframe.html">All Classes</a></li>
