--- a/mitiv/optim/NonmonotoneLineSearch.html
+++ b/mitiv/optim/NonmonotoneLineSearch.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/NonmonotoneLineSearch.html" target="_top">FRAMES</a></li>
@@ -102,19 +102,21 @@
 <pre>public class <strong>NonmonotoneLineSearch</strong>
 extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></pre>
 <div class="block">Nonmonotone line search method.
- 
+
  <p>
- This calls implements nonmonotone line search method of Birgin,
- Martinez, and Raydan (2000).</p>
- 
+ This calls implements nonmonotone line search method of Birgin, Martinez, and
+ Raydan (2000).
+ </p>
+
  <ol>
- <li>Ernesto G. Birgin, José Mario Martínez, and Marcos Raydan. "<i>Nonmonotone
-     spectral projected gradient methods on convex sets</i>." SIAM J. Optim.,
-     <b>10</b>, pp. 1196–1211, (2000). [doi: 10.1137/S1052623497330963]</li>
+ <li>Ernesto G. Birgin, José Mario Martínez, and Marcos Raydan. "
+ <i>Nonmonotone spectral projected gradient methods on convex sets</i>." SIAM
+ J. Optim., <b>10</b>, pp. 1196–1211, (2000). [doi: 10.1137/S1052623497330963]
+ </li>
  <li>Ernesto G Birgin, José Mario Martínez, and Marcos Raydan. "<i>Algorithm
-     813: SPG — software for convex-constrained optimization</i>." ACM
-     Transactions on Mathematical Software (TOMS), <b>27</b>, pp. 340–349
-     (2001). [doi: 10.1145/502800]</li>
+ 813: SPG — software for convex-constrained optimization</i>." ACM
+ Transactions on Mathematical Software (TOMS), <b>27</b>, pp. 340–349 (2001).
+ [doi: 10.1145/502800]</li>
  </ul></div>
 <dl><dt><span class="strong">Author:</span></dt>
   <dd>Éric Thiébaut.</dd></dl>
@@ -135,7 +137,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <!--   -->
 </a>
 <h3>Fields inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></h3>
-<code><a href="../../mitiv/optim/LineSearch.html#CONVERGENCE">CONVERGENCE</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_BAD_WORKSPACE">ERROR_BAD_WORKSPACE</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_CORRUPTED_WORKSPACE">ERROR_CORRUPTED_WORKSPACE</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_ILLEGAL_ADDRESS">ERROR_ILLEGAL_ADDRESS</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_ILLEGAL_FX">ERROR_ILLEGAL_FX</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_INITIAL_DERIVATIVE_GE_ZERO">ERROR_INITIAL_DERIVATIVE_GE_ZERO</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_NOT_A_DESCENT">ERROR_NOT_A_DESCENT</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_NOT_STARTED">ERROR_NOT_STARTED</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STP_CHANGED">ERROR_STP_CHANGED</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STP_GT_STPMAX">ERROR_STP_GT_STPMAX</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STP_LT_STPMIN">ERROR_STP_LT_STPMIN</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STP_OUTSIDE_BRACKET">ERROR_STP_OUTSIDE_BRACKET</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STPMIN_GT_STPMAX">ERROR_STPMIN_GT_STPMAX</a>, <a href="../../mitiv/optim/LineSearch.html#ERROR_STPMIN_LT_ZERO">ERROR_STPMIN_LT_ZERO</a>, <a href="../../mitiv/optim/LineSearch.html#finit">finit</a>, <a href="../../mitiv/optim/LineSearch.html#ginit">ginit</a>, <a href="../../mitiv/optim/LineSearch.html#SEARCH">SEARCH</a>, <a href="../../mitiv/optim/LineSearch.html#status">status</a>, <a href="../../mitiv/optim/LineSearch.html#stp">stp</a>, <a href="../../mitiv/optim/LineSearch.html#stpmax">stpmax</a>, <a href="../../mitiv/optim/LineSearch.html#stpmin">stpmin</a>, <a href="../../mitiv/optim/LineSearch.html#WARNING_ROUNDING_ERRORS_PREVENT_PROGRESS">WARNING_ROUNDING_ERRORS_PREVENT_PROGRESS</a>, <a href="../../mitiv/optim/LineSearch.html#WARNING_STP_EQ_STPMAX">WARNING_STP_EQ_STPMAX</a>, <a href="../../mitiv/optim/LineSearch.html#WARNING_STP_EQ_STPMIN">WARNING_STP_EQ_STPMIN</a>, <a href="../../mitiv/optim/LineSearch.html#WARNING_XTOL_TEST_SATISFIED">WARNING_XTOL_TEST_SATISFIED</a></code></li>
+<code><a href="../../mitiv/optim/LineSearch.html#finit">finit</a>, <a href="../../mitiv/optim/LineSearch.html#ginit">ginit</a>, <a href="../../mitiv/optim/LineSearch.html#stp">stp</a>, <a href="../../mitiv/optim/LineSearch.html#stpmax">stpmax</a>, <a href="../../mitiv/optim/LineSearch.html#stpmin">stpmin</a></code></li>
 </ul>
 </li>
 </ul>
@@ -178,7 +180,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/NonmonotoneLineSearch.html#getLowerBound()">getLowerBound</a></strong>()</code>
-<div class="block">Get lower steplength bound to trigger bisection.</div>
+<div class="block">Get lower step length bound to trigger bisection.</div>
 </td>
 </tr>
 <tr class="rowColor">
@@ -190,11 +192,11 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/NonmonotoneLineSearch.html#getUpperBound()">getUpperBound</a></strong>()</code>
-<div class="block">Get upper steplength relative bound to trigger bisection.</div>
+<div class="block">Get upper step length relative bound to trigger bisection.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code><a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></code></td>
+<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/NonmonotoneLineSearch.html#iterateHook(double, double)">iterateHook</a></strong>(double&nbsp;f,
            double&nbsp;g)</code>
 <div class="block">Protected abstract method to iterate during a line search.</div>
@@ -218,7 +220,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code>protected <a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></code></td>
+<td class="colFirst"><code>protected void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/NonmonotoneLineSearch.html#startHook()">startHook</a></strong>()</code>
 <div class="block">Protected method to set internals at the start of a line search.</div>
 </td>
@@ -229,7 +231,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <!--   -->
 </a>
 <h3>Methods inherited from class&nbsp;mitiv.optim.<a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></h3>
-<code><a href="../../mitiv/optim/LineSearch.html#converged()">converged</a>, <a href="../../mitiv/optim/LineSearch.html#finished()">finished</a>, <a href="../../mitiv/optim/LineSearch.html#getMessage()">getMessage</a>, <a href="../../mitiv/optim/LineSearch.html#getStatus()">getStatus</a>, <a href="../../mitiv/optim/LineSearch.html#getStep()">getStep</a>, <a href="../../mitiv/optim/LineSearch.html#hasErrors()">hasErrors</a>, <a href="../../mitiv/optim/LineSearch.html#hasWarnings()">hasWarnings</a>, <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)">iterate</a>, <a href="../../mitiv/optim/LineSearch.html#start(double, double, double, double, double)">start</a></code></li>
+<code><a href="../../mitiv/optim/LineSearch.html#converged()">converged</a>, <a href="../../mitiv/optim/LineSearch.html#failure(mitiv.optim.OptimStatus)">failure</a>, <a href="../../mitiv/optim/LineSearch.html#finished()">finished</a>, <a href="../../mitiv/optim/LineSearch.html#getMessage()">getMessage</a>, <a href="../../mitiv/optim/LineSearch.html#getStatus()">getStatus</a>, <a href="../../mitiv/optim/LineSearch.html#getStep()">getStep</a>, <a href="../../mitiv/optim/LineSearch.html#getTask()">getTask</a>, <a href="../../mitiv/optim/LineSearch.html#hasErrors()">hasErrors</a>, <a href="../../mitiv/optim/LineSearch.html#hasWarnings()">hasWarnings</a>, <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)">iterate</a>, <a href="../../mitiv/optim/LineSearch.html#start(double, double, double, double, double)">start</a>, <a href="../../mitiv/optim/LineSearch.html#success(mitiv.optim.LineSearchTask)">success</a>, <a href="../../mitiv/optim/LineSearch.html#warning(mitiv.optim.OptimStatus)">warning</a></code></li>
 </ul>
 <ul class="blockList">
 <li class="blockList"><a name="methods_inherited_from_class_java.lang.Object">
@@ -303,15 +305,17 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
  <p>
  The line search is assumed to have converged when the following
  sufficient decrease (Armijo) condition holds:
+
  <pre>
     f(x0 + alpha*d) <= fmax + alpha*ftol*<d|g(x0)>
  </pre>
+
  where <i>fmax</i> is the highest function value since the last <i>m</i>
  steps, <i>alpha</i> is the step length and <i>ftol</i> is the parameter
- of the Armijo condition.</p></div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>ftol</code> - - The parameter value.  Must be in the range (0,1)
-                 otherwise an <code>IllegalArgumentException</code> is
-                 thrown.</dd></dl>
+ of the Armijo condition.
+ </p></div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>ftol</code> - - The parameter value. Must be in the range (0,1) otherwise an
+            <code>IllegalArgumentException</code> is thrown.</dd></dl>
 </li>
 </ul>
 <a name="getLowerBound()">
@@ -321,7 +325,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <li class="blockList">
 <h4>getLowerBound</h4>
 <pre>public&nbsp;double&nbsp;getLowerBound()</pre>
-<div class="block">Get lower steplength bound to trigger bisection.</div>
+<div class="block">Get lower step length bound to trigger bisection.</div>
 </li>
 </ul>
 <a name="getUpperBound()">
@@ -331,7 +335,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <li class="blockList">
 <h4>getUpperBound</h4>
 <pre>public&nbsp;double&nbsp;getUpperBound()</pre>
-<div class="block">Get upper steplength relative bound to trigger bisection.</div>
+<div class="block">Get upper step length relative bound to trigger bisection.</div>
 </li>
 </ul>
 <a name="setBounds(double, double)">
@@ -343,7 +347,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <pre>public&nbsp;void&nbsp;setBounds(double&nbsp;lower,
              double&nbsp;upper)</pre>
 <div class="block">Set bounds to trigger bisection.</div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>lower</code> - The lower steplength bound to trigger bisection.</dd><dd><code>upper</code> - The upper steplength relative bound to trigger bisection.</dd></dl>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>lower</code> - The lower step length bound to trigger bisection.</dd><dd><code>upper</code> - The upper step length relative bound to trigger bisection.</dd></dl>
 </li>
 </ul>
 <a name="startHook()">
@@ -352,17 +356,22 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <ul class="blockList">
 <li class="blockList">
 <h4>startHook</h4>
-<pre>protected&nbsp;<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a>&nbsp;startHook()</pre>
+<pre>protected&nbsp;void&nbsp;startHook()</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../mitiv/optim/LineSearch.html#startHook()">LineSearch</a></code></strong></div>
 <div class="block">Protected method to set internals at the start of a line search.
 
- This protected method is called by the <a href="../../mitiv/optim/LineSearch.html#start(double, double, double, double, double)"><code>LineSearch.start(double, double, double, double, double)</code></a> method to set attributes of the
- line search instance after starting a new search.  It can be overwritten as needed,
- the default method does nothing but return <code>LineSearch.SEARCH</code>.</div>
+ This protected method is called by the <a href="../../mitiv/optim/LineSearch.html#start(double, double, double, double, double)"><code>LineSearch.start(double, double, double, double, double)</code></a> method to set
+ attributes of the line search instance after starting a new search. It
+ can be overwritten as needed, the default method does nothing but set the
+ next task to be <code>LineSearch.SEARCH</code>.
+
+ Derived line search classes which override this method should call @{link
+ success} or @{link failure} to set the next task on success or to set the
+ reason of the error on failure.</div>
 <dl>
 <dt><strong>Overrides:</strong></dt>
 <dd><code><a href="../../mitiv/optim/LineSearch.html#startHook()">startHook</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></code></dd>
-<dt><span class="strong">Returns:</span></dt><dd>The new status of the line search instance, in principle <code>LineSearch.SEARCH</code>.</dd></dl>
+</dl>
 </li>
 </ul>
 <a name="iterateHook(double, double)">
@@ -371,24 +380,28 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <ul class="blockList">
 <li class="blockList">
 <h4>iterateHook</h4>
-<pre>public&nbsp;<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a>&nbsp;iterateHook(double&nbsp;f,
-                           double&nbsp;g)</pre>
+<pre>public&nbsp;void&nbsp;iterateHook(double&nbsp;f,
+               double&nbsp;g)</pre>
 <div class="block"><strong>Description copied from class:&nbsp;<code><a href="../../mitiv/optim/LineSearch.html#iterateHook(double, double)">LineSearch</a></code></strong></div>
 <div class="block">Protected abstract method to iterate during a line search.
 
- This protected method is called by the <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)"><code>LineSearch.iterate(double, double, double)</code></a> method to check whether line
- search has converged and, otherwise, to compute the next step to try (stored
- as attribute <code>stp</code>).  The provided arguments have been checked.  Upon return,
- the caller method, <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)"><code>LineSearch.iterate(double, double, double)</code></a>, takes care of safeguarding the step.</div>
+ This protected method is called by the <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)"><code>LineSearch.iterate(double, double, double)</code></a> method to check
+ whether line search has converged and, otherwise, to compute the next
+ step to try (stored as attribute <code>stp</code>). The provided arguments
+ have been checked. Upon return, the caller method, <a href="../../mitiv/optim/LineSearch.html#iterate(double, double, double)"><code>LineSearch.iterate(double, double, double)</code></a>,
+ takes care of safeguarding the step.
+
+ This method in derived line search classes must call @{link success}
+ or @{link failure} to set the next task on success or to set the reason
+ of the error on failure.</div>
 <dl>
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/optim/LineSearch.html#iterateHook(double, double)">iterateHook</a></code>&nbsp;in class&nbsp;<code><a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim">LineSearch</a></code></dd>
-<dt><span class="strong">Parameters:</span></dt><dd><code>f</code> - The value of the function at <code>x = x0 + stp*p</code> where <code>x0</code>
-             are the variables at the start of the line search and <code>p</code> is the
-             search direction.</dd><dd><code>g</code> - The directional derivative at <code>x</code>, that is <code>p'.g(x)</code> the
-             inner product between the search direction and the function gradient at
-             <code>x</code>.</dd>
-<dt><span class="strong">Returns:</span></dt><dd>The new status of the line search instance.</dd></dl>
+<dt><span class="strong">Parameters:</span></dt><dd><code>f</code> - The value of the function at <code>x = x0 + stp*p</code> where
+            <code>x0</code> are the variables at the start of the line search
+            and <code>p</code> is the search direction.</dd><dd><code>g</code> - The directional derivative at <code>x</code>, that is
+            <code>p'.g(x)</code> the inner product between the search direction
+            and the function gradient at <code>x</code>.</dd></dl>
 </li>
 </ul>
 <a name="main(java.lang.String[])">
@@ -426,7 +439,7 @@ extends <a href="../../mitiv/optim/LineSearch.html" title="class in mitiv.optim"
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/NonmonotoneLineSearch.html" target="_top">FRAMES</a></li>
