--- a/mitiv/optim/ReverseCommunicationOptimizer.html
+++ b/mitiv/optim/ReverseCommunicationOptimizer.html
@@ -102,7 +102,9 @@
 extends java.lang.Object</pre>
 <div class="block">Interface for multivariate optimization methods with reverse communication.
 
- The typical usage of reverse communication optimization methods is as follows:
+ The typical usage of reverse communication optimization methods is as
+ follows:
+
  <pre>
    // Define the vector space to which belong the variables.
    VectorSpace space = new ...;
@@ -169,47 +171,19 @@ extends java.lang.Object</pre>
 <th class="colLast" scope="col">Field and Description</th>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#BAD_PRECONDITIONER">BAD_PRECONDITIONER</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><code>protected int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#evaluations">evaluations</a></strong></code>
 <div class="block">Number of function (and gradient) evaluations since start.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>static int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a></strong></code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>protected int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#iterations">iterations</a></strong></code>
 <div class="block">Number of iterations since start.</div>
-</td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>protected <a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchStatus">lineSearchStatus</a></strong></code>
-<div class="block">Line search status (for error messages).</div>
-</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_ERROR">LNSRCH_ERROR</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_WARNING">LNSRCH_WARNING</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#NO_PROBLEMS">NO_PROBLEMS</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>protected int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#reason">reason</a></strong></code>
-<div class="block">Reason of failure.</div>
 </td>
 </tr>
 <tr class="rowColor">
@@ -221,12 +195,6 @@ extends java.lang.Object</pre>
 <tr class="altColor">
 <td class="colFirst"><code>static int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#SUCCESS">SUCCESS</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#task">task</a></strong></code>
-<div class="block">Pending task for the caller.</div>
-</td>
 </tr>
 </table>
 </li>
@@ -262,40 +230,38 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(int)">failure</a></strong>(int&nbsp;reason)</code>
-<div class="block">Set task so as to report a failure (not related to line search).</div>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#failure(mitiv.optim.OptimStatus)">failure</a></strong>(<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a>&nbsp;status)</code>
+<div class="block">Set internal state to indicate a failure.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code>java.lang.String</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getErrorMessage()">getErrorMessage</a></strong>()</code>
-<div class="block">Query a textual description of the reason of an abnormal
- termination.</div>
+<td class="colFirst"><code>int</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a></strong>()</code>
+<div class="block">Get the number of function (and gradient) evaluations since last start.</div>
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getEvaluations()">getEvaluations</a></strong>()</code>
-<div class="block">Get the number of function (and gradient) evaluations since
- last start.</div>
-</td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getIterations()">getIterations</a></strong>()</code>
 <div class="block">Get the iteration number.</div>
 </td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><code>int</code></td>
+<tr class="rowColor">
+<td class="colFirst"><code>java.lang.String</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getReason()">getReason</a></strong>()</code>
-<div class="block">Get the code corresponding to the reason of the abnormal termination.</div>
+<div class="block">Get a literal description of the current optimizer state.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getRestarts()">getRestarts</a></strong>()</code>
 <div class="block">Get the number of restarts.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#getStatus()">getStatus</a></strong>()</code>
+<div class="block">Get the optimizer internal status.</div>
 </td>
 </tr>
 <tr class="altColor">
@@ -313,27 +279,27 @@ extends java.lang.Object</pre>
 </td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#lineSearchFailure(mitiv.optim.LineSearchStatus)">lineSearchFailure</a></strong>(<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a>&nbsp;status)</code>
-<div class="block">Set task so as to report a line search failure.</div>
-</td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><code>abstract <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#restart()">restart</a></strong>()</code>
 <div class="block">Restart the search.</div>
-</td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#schedule(mitiv.optim.OptimTask)">schedule</a></strong>(<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;task)</code>
-<div class="block">Set next pending task (not a failure).</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>abstract <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#start()">start</a></strong>()</code>
 <div class="block">Start the search.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#success(mitiv.optim.OptimTask)">success</a></strong>(<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;task)</code>
+<div class="block">Set next pending task.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>protected <a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a></code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html#warning(mitiv.optim.OptimStatus)">warning</a></strong>(<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a>&nbsp;status)</code>
+<div class="block">Set internal state to indicate a non-fatal abnormal termination.</div>
 </td>
 </tr>
 </table>
@@ -376,76 +342,6 @@ extends java.lang.Object</pre>
 <h4>FAILURE</h4>
 <pre>public static final&nbsp;int FAILURE</pre>
 <dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.FAILURE">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="task">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>task</h4>
-<pre>protected&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> task</pre>
-<div class="block">Pending task for the caller.</div>
-</li>
-</ul>
-<a name="reason">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>reason</h4>
-<pre>protected&nbsp;int reason</pre>
-<div class="block">Reason of failure.</div>
-</li>
-</ul>
-<a name="lineSearchStatus">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>lineSearchStatus</h4>
-<pre>protected&nbsp;<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a> lineSearchStatus</pre>
-<div class="block">Line search status (for error messages).</div>
-</li>
-</ul>
-<a name="NO_PROBLEMS">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>NO_PROBLEMS</h4>
-<pre>public static final&nbsp;int NO_PROBLEMS</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.NO_PROBLEMS">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="BAD_PRECONDITIONER">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>BAD_PRECONDITIONER</h4>
-<pre>public static final&nbsp;int BAD_PRECONDITIONER</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.BAD_PRECONDITIONER">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="LNSRCH_WARNING">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>LNSRCH_WARNING</h4>
-<pre>public static final&nbsp;int LNSRCH_WARNING</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_WARNING">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="LNSRCH_ERROR">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>LNSRCH_ERROR</h4>
-<pre>public static final&nbsp;int LNSRCH_ERROR</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_ERROR">Constant Field Values</a></dd></dl>
 </li>
 </ul>
 <a name="evaluations">
@@ -568,10 +464,8 @@ extends java.lang.Object</pre>
 <li class="blockList">
 <h4>getEvaluations</h4>
 <pre>public final&nbsp;int&nbsp;getEvaluations()</pre>
-<div class="block">Get the number of function (and gradient) evaluations since
- last start.</div>
-<dl><dt><span class="strong">Returns:</span></dt><dd>The number of function and gradient evaluations since
-         last start.</dd></dl>
+<div class="block">Get the number of function (and gradient) evaluations since last start.</div>
+<dl><dt><span class="strong">Returns:</span></dt><dd>The number of function and gradient evaluations since last start.</dd></dl>
 </li>
 </ul>
 <a name="getRestarts()">
@@ -582,21 +476,49 @@ extends java.lang.Object</pre>
 <h4>getRestarts</h4>
 <pre>public final&nbsp;int&nbsp;getRestarts()</pre>
 <div class="block">Get the number of restarts.</div>
-<dl><dt><span class="strong">Returns:</span></dt><dd>The number of times algorithm has been restarted since
-         last start.</dd></dl>
+<dl><dt><span class="strong">Returns:</span></dt><dd>The number of times algorithm has been restarted since last
+         start.</dd></dl>
 </li>
 </ul>
-<a name="getErrorMessage()">
+<a name="failure(mitiv.optim.OptimStatus)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>getErrorMessage</h4>
-<pre>public&nbsp;java.lang.String&nbsp;getErrorMessage()</pre>
-<div class="block">Query a textual description of the reason of an abnormal
- termination.</div>
-<dl><dt><span class="strong">Returns:</span></dt><dd>A textual description of the reason of the abnormal
-         termination.</dd></dl>
+<h4>failure</h4>
+<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;failure(<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a>&nbsp;status)</pre>
+<div class="block">Set internal state to indicate a failure.</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>status</code> - - The reason of failure (must not be
+             <code>#OptimStatus.SUCCESS</code>).</dd>
+<dt><span class="strong">Returns:</span></dt><dd>The next pending task which has been set to
+         <code>LineSearchTask.ERROR</code>.</dd></dl>
+</li>
+</ul>
+<a name="warning(mitiv.optim.OptimStatus)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>warning</h4>
+<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;warning(<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a>&nbsp;status)</pre>
+<div class="block">Set internal state to indicate a non-fatal abnormal termination.</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>task</code> - - The reason of the termination (must not be
+            <code>OptimStatus.SUCCESS</code>).</dd>
+<dt><span class="strong">Returns:</span></dt><dd>The next pending task which has been set to
+         <code>#LineSearchTask.WARNING</code>.</dd></dl>
+</li>
+</ul>
+<a name="success(mitiv.optim.OptimTask)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>success</h4>
+<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;success(<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;task)</pre>
+<div class="block">Set next pending task.</div>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>task</code> - - The next pending task (must not be
+            <code>LineSearchTask.ERROR</code>).</dd>
+<dt><span class="strong">Returns:</span></dt><dd>The next pending task.</dd></dl>
 </li>
 </ul>
 <a name="getReason()">
@@ -605,40 +527,20 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>getReason</h4>
-<pre>public final&nbsp;int&nbsp;getReason()</pre>
-<div class="block">Get the code corresponding to the reason of the abnormal termination.</div>
-<dl><dt><span class="strong">Returns:</span></dt><dd>A numerical code corresponding to the reason of the abnormal
-         termination.</dd><dt><span class="strong">See Also:</span></dt><dd><code>#getErrorMessage}();</code></dd></dl>
+<pre>public final&nbsp;java.lang.String&nbsp;getReason()</pre>
+<div class="block">Get a literal description of the current optimizer state.</div>
+<dl><dt><span class="strong">Returns:</span></dt><dd>A string describing the state.</dd></dl>
 </li>
 </ul>
-<a name="schedule(mitiv.optim.OptimTask)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>schedule</h4>
-<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;schedule(<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;task)</pre>
-<div class="block">Set next pending task (not a failure).</div>
-</li>
-</ul>
-<a name="failure(int)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>failure</h4>
-<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;failure(int&nbsp;reason)</pre>
-<div class="block">Set task so as to report a failure (not related to line search).</div>
-</li>
-</ul>
-<a name="lineSearchFailure(mitiv.optim.LineSearchStatus)">
+<a name="getStatus()">
 <!--   -->
 </a>
 <ul class="blockListLast">
 <li class="blockList">
-<h4>lineSearchFailure</h4>
-<pre>protected final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a>&nbsp;lineSearchFailure(<a href="../../mitiv/optim/LineSearchStatus.html" title="enum in mitiv.optim">LineSearchStatus</a>&nbsp;status)</pre>
-<div class="block">Set task so as to report a line search failure.</div>
+<h4>getStatus</h4>
+<pre>public final&nbsp;<a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim">OptimStatus</a>&nbsp;getStatus()</pre>
+<div class="block">Get the optimizer internal status.</div>
+<dl><dt><span class="strong">Returns:</span></dt><dd>The current optimizer status.</dd><dt><span class="strong">See Also:</span></dt><dd><code>#getMessage}();</code></dd></dl>
 </li>
 </ul>
 </li>
